# CJ_2023

./: .gitignore  README.md  recibir_info_bluetooth
blufi_solo/: comunicacion_sensor_riego  estructura_MQTT  pendientes
blufi_solo/blufi/: CMakeLists.txt  README.md  memoria.txt  partitions.csv  sdkconfig  sdkconfig.old
blufi_solo/blufi/components/BH1750/: bh1750.c
blufi_solo/blufi/components/BLUFI/: CMakeLists.txt  blufi.c
blufi_solo/blufi/components/BLUFI/include/: blufi.h
blufi_solo/blufi/components/DHT/: dht.c
blufi_solo/blufi/components/DHT/include/: dht.h
blufi_solo/blufi/components/HEADER/: CMakeLists.txt  header.c
blufi_solo/blufi/components/HTTPS_OTA/: CMakeLists.txt  certificate.pem  ota.c
blufi_solo/blufi/components/HTTPS_OTA/include/: ota.h
blufi_solo/blufi/components/MQTT/: mqtt.c
blufi_solo/blufi/components/MQTTCJ/: CMakeLists.txt  mqtt.c
blufi_solo/blufi/components/MQTTCJ/include/: mqtt.h
blufi_solo/blufi/components/POMP/: CMakeLists.txt  pomp.c
blufi_solo/blufi/components/RTC/: CMakeLists.txt  ntp.c  rtc.c  rtc_cj.c
blufi_solo/blufi/components/SOIL/: CMakeLists.txt  soil.c
blufi_solo/blufi/components/STORAGE/: CMakeLists.txt  storage.c
blufi_solo/blufi/main/: CMakeLists.txt  blufi.c  main.c
blufi_solo/smart_grow/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
blufi_solo/smart_grow/components/BH1750/: CMakeLists.txt  bh1750.c
blufi_solo/smart_grow/components/BLUFI/: blufi.c  blufi_init.c
blufi_solo/smart_grow/components/DHT/: dht.c
blufi_solo/smart_grow/components/HEADER/: CMakeLists.txt  header.c
blufi_solo/smart_grow/components/HTTPS_OTA/: CMakeLists.txt  ota.c
blufi_solo/smart_grow/components/HTTPS_OTA/include/: ota.h
blufi_solo/smart_grow/components/MQTTCJ/: CMakeLists.txt  component.mk  mqtt.c
blufi_solo/smart_grow/components/MQTTCJ/include/: credentials.h  mqtt.h
blufi_solo/smart_grow/components/POMP/: CMakeLists.txt  pomp.c
blufi_solo/smart_grow/components/RTC/: CMakeLists.txt  ntp.c
blufi_solo/smart_grow/components/SOIL/: CMakeLists.txt  soil.c
blufi_solo/smart_grow/main/: main.c
wifi-mqtt/station/: CMakeLists.txt  sdkconfig  sdkconfig.old
wifi-mqtt/station/components/BH1750/: CMakeLists.txt
wifi-mqtt/station/components/DHT/: CMakeLists.txt  dht.c
wifi-mqtt/station/components/MQTT/: CMakeLists.txt  Kconfig.projbuild  mqtt.c
wifi-mqtt/station/components/WIFI/: CMakeLists.txt  wifi.c
wifi-mqtt/station/main/: CMakeLists.txt  Kconfig.projbuild  bh1750.c  bh1750.h  blufi_example.h  blufi_example_main.c  blufi_init.c  dht.c  dht.h  main.c  mqtt.c  mqtt.h
(+18 files in other folders)
